@@ -10,6 +10,9 @@
 # 	autoconf (optional)
 #
 # $Log$
+# Revision 1.4  2004/11/21 20:27:53  jimmyo
+# Upped generic/sendmail_mailstats and generic/sendmail_mailtraffic to auto family.
+#
 # Revision 1.3  2004/11/10 15:49:05  jimmyo
 # Fixed typo in generic/sendmail_mailstats (patch by Lupe Christoph, SF#1058128).
 #
@@ -19,9 +22,11 @@
 # Revision 1.1  2004/02/18 18:40:03  jimmyo
 # Added Log:
 #
-#
+# Magic markers (used by munin-node-configure)
+#%# capabilities=autoconf
+#%# family=auto
 
-TEMP_FILE=/tmp/lrrd-sendmail
+TEMP_FILE=/tmp/munin-sendmail.$$
 
 if [ "$1" = "autoconf" ]; then
         if which mailstats 2>&1 > /dev/null ; then
@@ -57,6 +62,8 @@ while read line ; do
   rejected=`expr ${rejected} + $6`
   discarded=`expr ${discarded} + $7`
 done 
+
+rm -f ${TEMP_FILE}
 
 echo "received.value ${received}"
 echo "sent.value ${sent}"
