@@ -10,15 +10,20 @@
 # 	autoconf (optional)
 #
 # $Log$
+# Revision 1.4  2004/11/21 20:27:53  jimmyo
+# Upped generic/sendmail_mailstats and generic/sendmail_mailtraffic to auto family.
+#
 # Revision 1.3  2004/05/20 19:02:36  jimmyo
 # Set categories on a bunch of plugins
 #
 # Revision 1.2  2004/02/18 18:40:03  jimmyo
 # Added Log:
 #
-#
+# Magic markers (used by munin-node-configure)
+#%# capabilities=autoconf
+#%# family=auto
 
-TEMP_FILE=/tmp/lrrd-sendmail
+TEMP_FILE=/tmp/munin-sendmail.$$
 
 if [ "$1" = "autoconf" ]; then
 	if [ -f ${TEMP_FILE} ] ; then
